2006-03-09 Francois Dechelle <francois@dechelle.net>

	* Removed #ifdef LINUX|SOLARIS in src/eyedb/OString.cc and src/eyedb/utilsmthfe.cc. Added necessary tests in configure.in
	* Changed HAS_FATTACH to standard HAVE_FATTACH
	* Removed M_strsignal (assumed that all platforms have strsignal, if not we'll see)
	* Removed non-posix thread code in src/lib/rpcdb.cc (assume that all platforms have Posix threads)
	* Removed getrlimit code and #ifdef SOLARIS in src/lib/m_mem.cc
	
2006-03-07 Francois Dechelle <francois@dechelle.net>

	* Release 2.7.6

2006-03-07  Eric Viara  <viara@sysra.com>

	* Added const Oid::operator<(const Oid &) const method
	* Support --attr-cache=yes eyedbodl option
	* Sync stdio, iostream and write in eyedboql

2006-02-27 Francois Dechelle <francois@dechelle.net>

	* Changed Java m4 autoconf macros not to exit with error if javac
	not found
	* Added configure summary at end of configure.in

2006-02-21  Eric Viara  <viara@sysra.com>

	* Improved OQL GC
	* Added std::map var_map in class Config
	* Added ClientConfig and ServerConfig classes
	* Updated ODL C++ generator : suppressed #define Class_c, clone method, const behind GETOID methods

2006-02-19 Francois  <francois@dechelle.net>

	* Changed configure.in to reintroduce --enable-java flag

2006-02-16  Eric Viara  <viara@sysra.com>

	* Improved configuration parsing and error reporting
	* Added --server-conf option
	* Fixed concurrency problems in SessionLog
	* Suppressed pending eyedbd

2006-02-16 Francois  <francois@dechelle.net>

	* Changed src/eyedb/Config.cc and include/eyedb/Config.h: read $HOME/.eyedb/eyedb[d].conf file if this file exists, @include to include a file without error if file not found.

2006-02-16 Francois  <francois@dechelle.net>

	* Fixed examples/Makefile.am w.r.t. Makefile.eyedb, to get rid of Makefile variables that are not prefixed with EYEDB_

2006-02-16  Francois  <francois@dechelle.net>
